<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/custom_color_secondary_light"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/monthly_progress"
            android:textColor="@color/custom_color_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="192dp"
            android:layout_marginTop="42dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/lost_weight"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="14sp"
            android:textStyle="bold"
             />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="44dp"
            android:contentDescription="@string/progress_bar"
            app:srcCompat="@drawable/progress_bar" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="350dp"
        android:layout_height="240dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <RelativeLayout
                android:id="@+id/cyclebtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/acticitybg">

                <ImageView
                    android:id="@+id/cyclebtn_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/cycle" />

                <TextView
                    android:id="@+id/cyclebtn_text"
                    android:layout_width="106dp"
                    android:layout_height="29dp"
                    android:layout_below="@id/cyclebtn_img"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="-43dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/cyclebtn_img"
                    android:text="@string/evening_cycle"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cyclesbtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/cyclebtn_img"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="-44dp"
                    android:layout_toEndOf="@+id/cyclebtn_text"
                    android:text="@string/_50000_m"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/runbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/acticitybg">

                <ImageView
                    android:id="@+id/runbtn_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/run" />

                <TextView
                    android:id="@+id/runbtn_text"
                    android:layout_width="106dp"
                    android:layout_height="29dp"
                    android:layout_below="@id/runbtn_img"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="-43dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/runbtn_img"
                    android:text="@string/morning_run"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/runsbtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/runbtn_img"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="-44dp"
                    android:layout_toEndOf="@+id/runbtn_text"
                    android:text="@string/_10000_m"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/swimbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/acticitybg">

                <ImageView
                    android:id="@+id/swimbtn_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/swim" />

                <TextView
                    android:id="@+id/swimbtn_text"
                    android:layout_width="106dp"
                    android:layout_height="29dp"
                    android:layout_below="@id/swimbtn_img"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="-43dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/swimbtn_img"
                    android:text="@string/swimming"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/swimsbtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/swimbtn_img"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="-44dp"
                    android:layout_toEndOf="@+id/swimbtn_text"
                    android:text="@string/_10000_m"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/runbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/acticitybg">

                <ImageView
                    android:id="@+id/runbtn_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/run" />

                <TextView
                    android:id="@+id/runbtn_text"
                    android:layout_width="106dp"
                    android:layout_height="29dp"
                    android:layout_below="@id/runbtn_img"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="-43dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/runbtn_img"
                    android:text="@string/morning_run"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/runsbtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/runbtn_img"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="-44dp"
                    android:layout_toEndOf="@+id/runbtn_text"
                    android:text="@string/_10000_m"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:itemTextColor="@drawable/text_color_selector"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Ongoing Activities"
        android:textColor="@color/custom_color_primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:text="Upcoming Reminders"
        android:textColor="@color/custom_color_primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollview1"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="131dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="83dp"
            android:layout_height="119dp"
            android:layout_marginEnd="25dp"
            app:cardBackgroundColor="@color/custom_color_secondary_light"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="475dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Meditation"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="38dp"
                android:layout_height="46dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/clock"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="85dp"
                android:text="@string/_6_00_am"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="83dp"
            android:layout_height="119dp"
            android:layout_marginEnd="25dp"
            app:cardBackgroundColor="@color/custom_color_secondary_light"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="475dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/swimming"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="38dp"
                android:layout_height="46dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/calender"
                app:srcCompat="@drawable/date" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="85dp"
                android:text="@string/_6_00_pm"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="83dp"
            android:layout_height="119dp"
            app:cardBackgroundColor="@color/custom_color_secondary_light"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="475dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:text="@string/yoga"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="38dp"
                android:layout_height="46dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/clock"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="85dp"
                android:text="@string/_8_00_pm"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>